welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:14: error: value y is not a member of Unit
      if ((y==0)&&(diag==1)) {ecritMessage("plop")y=y+1;while (x!=0) {x=x-1;y=y+1}}
                                                  ^